--- a/app/src/main/res/layout/signup_tab_frag.xml
+++ b/app/src/main/res/layout/signup_tab_frag.xml
@@ -141,7 +141,7 @@
             app:layout_constraintWidth_percent=".8" />
 
         <CheckBox
-            android:id="@+id/checkBox_password_uni"
+            android:id="@+id/checkBox_landlord"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -169,7 +169,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/checkBox_password_uni"
+            app:layout_constraintTop_toBottomOf="@+id/checkBox_landlord"
             app:layout_constraintVertical_bias="0.1"
             app:layout_constraintWidth_percent=".8" />
 
