--- a/app/src/main/res/layout/bill_fragment.xml
+++ b/app/src/main/res/layout/bill_fragment.xml
@@ -72,29 +72,6 @@
             android:baselineAligned="false">
 
             <LinearLayout
-                android:id="@+id/supplier_list_course"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/supplier_list_course_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/Course"
-                    android:textSize="14sp" />
-
-<!--                <ImageView-->
-<!--                    android:layout_width="25dp"-->
-<!--                    android:layout_height="25dp"-->
-<!--                    android:contentDescription="@string/arrow_down_desc"-->
-<!--                    android:src="@drawable/icon_arrow_down" />-->
-            </LinearLayout>
-
-            <LinearLayout
                 android:id="@+id/supplier_list_sort"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -109,36 +86,26 @@
                     android:gravity="center"
                     android:text="@string/Sort"
                     android:textSize="14sp" />
-
-<!--                <ImageView-->
-<!--                    android:layout_width="25dp"-->
-<!--                    android:layout_height="25dp"-->
-<!--                    android:contentDescription="@string/arrow_down_desc"-->
-<!--                    android:src="@drawable/icon_arrow_down" />-->
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/supplier_list_trend"
+                android:id="@+id/supplier_list_course"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/supplier_list_trend_tv"
+                <CheckBox
+                    android:id="@+id/showAll"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="@string/Trend"
+                    android:text="@string/showAll"
                     android:textSize="14sp" />
-
-<!--                <ImageView-->
-<!--                    android:layout_width="25dp"-->
-<!--                    android:layout_height="25dp"-->
-<!--                    android:contentDescription="@string/arrow_down_desc"-->
-<!--                    android:src="@drawable/icon_arrow_down" />-->
             </LinearLayout>
+
+
         </LinearLayout>
         <View
             android:layout_width="match_parent"
