--- a/app/src/main/res/layout/signup_tab_frag.xml
+++ b/app/src/main/res/layout/signup_tab_frag.xml
@@ -9,9 +9,10 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/avatar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_marginTop="32dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
